# eventpp

./: .gitignore  CMakeLists.txt  readme.md  readme_zh.md
.github/workflows/: main.yml
doc/: benchmark.md  install.md  optimization_report.md  policies.md
doc/cn/: callbacklist.md  eventdispatcher.md  eventqueue.md  introduction.md  policies.md  readme.md
docs/: design_process_queue_with_zh.md
examples/: CMakeLists.txt  README.md  example_active_object_hsm.cpp  example_highperf_eventqueue.cpp
include/eventpp/: callbacklist.h  eventdispatcher.h  eventpolicies.h  eventqueue.h  hetereventdispatcher.h
include/eventpp/internal/: eventqueue_i.h  poolallocator_i.h
tests/: CMakeLists.txt  README.md
tests/benchmark/: CMakeLists.txt  b10_visitor_benchmark.cpp  b9_eventqueue_raw_benchmark.cpp
tests/unittest/: CMakeLists.txt  test_callbacklist_basic.cpp  test_queue_visitor.cpp
